# agentic-rag-mcp-platform

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  graph.py  ingest.py  inspect_chroma.py  llm.py  main.py  mcp_client.py  mcp_server.py  retrieval.py  schemas.py
